[project]
name = "brevimage"
description = "Nodes:BrevImage. ComfyUI Load Image From URL"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/bkunbargi/BrevImage"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "BrevImage"
Icon = ""
